# k6r

./: .gitignore  Cargo.toml  README.ko-KR.md  README.md  sample.json  sample_jsonl.json
.github/workflows/: test.yml
src/: main.rs
